<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.JetBreed.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jet_featured_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.JetBreed.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jet_apartment_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.JetBreed.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jet_accessories_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.JetBreed.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jet_shoes_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.JetBreed.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jet_tops_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.JetBreed.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jet_bottoms_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.JetBreed.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jet_dresses_label" />

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.JetBreed.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jet_account_label" />

</merge>